# helsinki-profile-gdpr-api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-test.txt  setup.cfg  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  release-please.yml  release.yml  staging.yml  test.yml
helsinki_gdpr/: models.py  types.py  urls.py  views.py
tests/: conftest.py  factories.py  models.py  settings.py  test_gdpr_api.py  test_gdpr_api_delete.py  test_gdpr_api_query.py  test_models.py  urls.py
tests/__snapshots__/: test_gdpr_api_delete.ambr  test_gdpr_api_query.ambr  test_models.ambr
tests/snapshots/: snap_test_gdpr_api.py  snap_test_gdpr_api_delete.py  snap_test_gdpr_api_query.py  snap_test_models.py
