[metadata]
name = helsinki-profile-gdpr-api
version = 0.2.0
author = City of Helsinki
author_email = dev@hel.fi
description = Django app for implementing Helsinki profile GDPR API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/City-of-Helsinki/helsinki-profile-gdpr-api
project_urls =
    Bug Tracker = https://github.com/City-of-Helsinki/helsinki-profile-gdpr-api/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    Django
    djangorestframework
    django-helusers
    drf-oidc-auth

[options.packages.find]
exclude =
    tests
    tests.*

[pep8]
max-line-length = 120
exclude = *migrations*
ignore = E309

[flake8]
max-line-length = 120
exclude = *migrations*
max-complexity = 10

[tool:pytest]
pythonpath = .
DJANGO_SETTINGS_MODULE = tests.settings
norecursedirs = .git .idea venv*
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE

[coverage:run]
branch = True
omit = *migrations*,*site-packages*,*venv*,*tests*

[isort]
atomic = True
combine_as_imports = False
indent = 4
length_sort = False
multi_line_output = 3
order_by_type = False
skip = migrations,venv
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
default_section = THIRDPARTY
extra_standard_library= token,tokenize,enum,importlib
known_first_party=
    helsinki_gdpr,
known_third_party = django

[pydocstyle]
ignore=D100,D104,D105,D200,D203,D400
