[metadata]
name = helsinki-profile-gdpr-api
version = 0.2.0
author = City of Helsinki
author_email = dev@hel.fi
description = Django app for implementing Helsinki profile GDPR API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/City-of-Helsinki/helsinki-profile-gdpr-api
project_urls =
    Bug Tracker = https://github.com/City-of-Helsinki/helsinki-profile-gdpr-api/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    Django
    djangorestframework
    django-helusers
    drf-oidc-auth

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
pythonpath = .
DJANGO_SETTINGS_MODULE = tests.settings
norecursedirs = .git .idea venv*
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE

[coverage:run]
branch = True
omit = *migrations*,*site-packages*,*venv*,*tests*
