[metadata]
name = helsinki-profile-gdpr-api
version = 0.2.0
author = City of Helsinki
author_email = dev@hel.fi
description = Django app for implementing Helsinki profile GDPR API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/City-of-Helsinki/helsinki-profile-gdpr-api
project_urls =
    Bug Tracker = https://github.com/City-of-Helsinki/helsinki-profile-gdpr-api/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    Django>=4.2
    djangorestframework
    django-helusers
    drf-oidc-auth

[options.packages.find]
exclude =
    tests
    tests.*
